# tree-sitter-nix

./: .editorconfig  .gitignore  .yamlfmt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  default.nix  devshell.nix  flake.nix  go.mod  grammar.js  package-lock.json  package.json  package.nix  pyproject.toml  renovate.json  setup.py  shell.nix  tree-sitter-nix.wasm  tree-sitter.json  treefmt.nix  treefmt.toml
.github/workflows/: checks.yml  nix-github-actions.yml  publish.yml
bindings/c/: tree-sitter-nix.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_nix/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNix/: nix.h
bindings/swift/TreeSitterNixTests/: TreeSitterNixTests.swift
corpus/: basic.txt
examples/: build.nix  fetch-github.nix
examples/go/: README.md  flake-inputs.go  flake-inputs_test.go  flake.nix  go.mod  go.sum  package.nix  shell.nix
queries/: filename-injections.nix  highlights.scm  injections.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: error_recovery.txt  string.txt
test/highlight/: basic.nix
