[package]
name = "tree-sitter-nix"
description = "Nix grammar for tree-sitter"
version = "0.0.6"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "nix"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-nix"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.1"

[dev-dependencies]
tree-sitter = { version = "0.23" }

[build-dependencies]
cc = "1.1"
